# nccs-global-impacts-modelling

./: README.md  pyproject.toml  setup.py
additionnal_scripts/bi_functions_scripts/: bi_calibration.py  bi_country_functions.py  bi_regional_functions.py
additionnal_scripts/hazard/stormeurope/: create_stormeurope_hazard.py
additionnal_scripts/impacts/slr_intermediate/: 01_download_aqueduct_data.py  02_calculate_bounding_boxes.py  03_calculate_exposure_metadata.py  04_calculate_slr_intermediate.py  05_summarise_outputs.py  validation_create_haz_exp_mappings.py
code_examples/: exposures.ipynb
exposures/: README.md  utils.py
exposures/forestry/refinement_1/: README_forestry.md
exposures/mining/refinement_1/: README_mining.md
exposures/utilities/refinement_1/: README_utilities.md  plot_results.py
nccs/: analysis.py  climada.conf  concat_results.py  sea_level_rise_difference.py
nccs/pipeline/direct/: agriculture.py  business_interruption.py  calc_yearset.py  combine_impact_funcs.py  direct.py  river_flood.py  stormeurope.py
nccs/pipeline/indirect/: event_aggregations.py  indirect.py
nccs/run_configurations/: config.py  config_interim.py  config_mvp.py  config_sea_level.py  test_config.py
nccs/test/: test_analysis.py
nccs/utils/: combine_for_dashboard.py  data_validation.py  data_validation_reformat.py  delete_results.py  euler.py  folder_naming.py  s3client.py
other/dashboard_deployment/: dashboard.py
other/utils/: data_validation.py
other/vm/: .dockerignore
requirements/: requirements.yml
resources/impact_functions/: README_impact_fun.md
(+35 files in other folders)
