[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "nccs"
version = "1.0.0"
description = "NCCS Global impacts of climate change on Switzerland Modelling Pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "GPLv3"}
authors = [
    {name = "NCCS", email = "sjuhel@ethz.ch"}
]
keywords = ["climate", "impacts", "modeling", "switzerland"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bokeh",
    "boto3",
    "python-dotenv",
    "climada==6.1.0",
    "climada_petals==6.1.0",
]

[project.urls]
Repository = "https://github.com/CLIMADA-project/nccs-global-impacts-modelling"
Issues = "https://github.com/CLIMADA-project/nccs-global-impacts-modelling/issues"

[tool.setuptools]
packages = ["nccs"]